Fri Sep  3 01:54:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): extact target prefix from Makefiles.

	* ext/extmk.rb: already built-in libraries satisfy dependencies.
	  [ruby-dev:24028]

Wed Sep  1 21:16:50 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/lib/tk/spinbox.rb: fix typo

Wed Sep  1 19:28:37 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_proc_exec): label cannot precede variable declarations.

Tue Aug 31 18:20:49 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tkutil.c (cbsubst_init): fix memory leak

	* ext/tk/tkutil.c (cbsubst_get_all_subst_keys): fix SEGV

Tue Aug 31 16:04:22 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_delete): when a tcltkip is deleted,
	  destroy its root widget

Tue Aug 31 12:30:36 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (del_root): fix SEGV

Mon Aug 30 21:50:14 2004  Dave Thomas  <dave@pragprog.com>

	* object.c: Add RDoc for Module.included.

Mon Aug 30 23:11:06 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_driver.rb (and others): ri now merges documentation
	  if it finds the same class in multiple places.

Mon Aug 30 22:40:30 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: 'restart' method accepts arguments

Mon Aug 30 15:10:46 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (GNU/k*BSD): fixed FTBFS on GNU/k*BSD. [ruby-dev:24051]

Sun Aug 29 14:08:56 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: compile error on bcc32 [ruby-dev:24081]

	* ext/tk/lib/multi-tk.rb: MultiTkIp#eval_string does not work

Sat Aug 28 23:04:41 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_and): protect parameters from GC.
	  [ruby-talk:110664]

Fri Aug 27 12:13:50 2004  Tanaka Akira  <akr@m17n.org>

	* ext/stringio/stringio.c (Init_stringio): add StringIO#readpartial as
	  an alias for StringIO#sysread.
